Fix some deprecation warnings in test-suite component